--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Dataset
+dataset/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -109,6 +112,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+your-code/.env
 
 # Spyder project settings
 .spyderproject
